--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "twbs/bootstrap":"^3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
