--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,16 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/security.html
 security:
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_MEMBRES
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
+        gestionUser:
+            entity:
+                class: AppBundle:User
+                property: pseudo
+                
         in_memory:
             memory: ~
 
@@ -14,9 +21,37 @@ security:
             security: false
 
         main:
+            pattern : ^/
+            anonymous: true
+            provider: gestionUser
+            form_login:
+                check_path: loginCheck
+                default_target_path: carnetdebord
+            logout:
+                path: loginOut
+                target: /
+                
+        administration:
+            pattern: ^/
+            anonymous: false
+            provider: gestionUser
+            form_login:
+                check_path: loginCheck
+                default_target_path: carnetdebord
+            logout:
+                path: loginOut
+                target: /
             anonymous: ~
+            
+    encoders:
+#        Symfony\Component\Security\Core\User\User: plaintext
+        AppBundle\Entity\User:
+            algorithm: plaintext
+            ignore_case: false
             # activate different ways to authenticate
-
+    access_control:   
+        # Un admin ou un user classique peut ajouter une annonce ... quelque chose d'étrange est ici ....
+        - { path: ^/carnet , roles: ROLE_MEMBRES }  
             # http_basic: ~
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
